@@ -1,9 +1,9 @@
-Microsoft Developer Studio Workspace File, Format Version 6.00
+Microsoft Developer Studio Workspace File, Format Version 5.00
 # WARNING: DO NOT EDIT OR DELETE THIS WORKSPACE FILE!
 
 ###############################################################################
 
-Project: "thread1"=.\thread1.dsp - Package Owner=<4>
+Project: "thread"=.\thread.dsp - Package Owner=<4>
 
 Package=<5>
 {{{
