@@ -1,4 +1,4 @@
-// RCS: @(#) $Id: thread.rc,v 1.2 2000/04/10 23:40:09 welch Exp $
+// RCS: @(#) $Id: thread.rc,v 1.3 2000/04/11 23:11:03 welch Exp $
 //
 // Version resource script
 //
