@@ -1,3 +1,8 @@
+2000-04-11  Brent Welch <welch@scriptics.com>
+
+	* Picked up minor changes from David Gravereaux <davygrvy@bigfoot.com>
+	* for compilation on windows with his alternate project files.
+
 2000-04-10  Brent Welch <welch@scriptics.com>
 
 	* Moved all the configure.in, Makefile.in etc. up to the top level out
